--- a/src/app/pages/bakery-section/bakery-section.component.html
+++ b/src/app/pages/bakery-section/bakery-section.component.html
@@ -20,6 +20,9 @@
     >
       <div class="image-box">
         <img [src]="cat.img" [alt]="cat.title" />
+         <div class="hover-layer">
+    <button class="order-btn">Order Now</button>
+  </div>
       </div>
       <h3>{{ cat.title }}</h3>
       <p>{{ cat.desc }}</p>
