--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,31 +1,31 @@
 <div class="welcome-screen">
   <!-- Top Nav -->
   <header class="navbar">
-    <!-- Logo -->
-    <div class="navbar__logo">
-      Delfood
-    </div>
+    <div class="navbar__logo">Delfood</div>
 
-    <!-- Center Nav Items -->
     <nav class="navbar__menu">
       <a href="#" class="navbar__link">Demos</a>
       <a href="#" class="navbar__link">Features</a>
-      <a href="#" class="navbar__link">Shop</a>
+
+      <!-- Menu trigger: the link AND the dropdown are inside this container -->
+      <div class="menu-trigger">
+        <a href="#" class="navbar__link navbar__link--menu"
+           aria-haspopup="true" aria-expanded="false" id="menu-trigger-link">
+          Menu
+        </a>
+
+        <!-- DROPDOWN BAND (moved inside the trigger container) -->
+        <div class="menu-dropdown" role="menu" aria-labelledby="menu-trigger-link">
+          <app-menuband></app-menuband>
+        </div>
+      </div>
+
       <a href="#" class="navbar__link">Visual Builder</a>
       <a href="#" class="navbar__link">Download</a>
     </nav>
 
-    <!-- Cart Icon -->
-    <button class="navbar__cart" type="button">
-      <!-- Option 1: Font Awesome icon -->
+    <button class="navbar__cart">
       <i class="fa-solid fa-cart-shopping"></i>
-
-      <!-- Option 2 (no libraries): simple cart icon -->
-      <!--
-      <span class="cart-icon">
-        🛒
-      </span>
-      -->
     </button>
   </header>
 </div>
