--- a/src/app/pages/hero-slider/hero-slider.component.scss
+++ b/src/app/pages/hero-slider/hero-slider.component.scss
@@ -141,7 +141,7 @@ $curve-color: #ffffff;
       position: relative;
 
       .dish-item {
-        border: 10px solid #1a1a19;
+        border: 10px solid #fffffa;
         border-radius: 50%;
         overflow: hidden;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
