--- a/src/app/pages/recipes/recipes.component.scss
+++ b/src/app/pages/recipes/recipes.component.scss
@@ -144,7 +144,7 @@ $gap: 6px;            // black space width
 .recipe_section .btn-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #10100e;
+  background-color: #10100e1c;
   color: #aba3a3;
   border-radius: 45px;
   -webkit-transition: all 0.3s;
